Delete tartget folders